app page: fix display of faulty screenshots

Just remove them from the model when they fail loading

BUG: 413812